--- a/css/main.css
+++ b/css/main.css
@@ -81,13 +81,13 @@ body{
 }
 
 /* CONTEINER LOGO-PLUS, CREA-PLAYLIST */
-.inline{
+.inline-row{
     display: inline-flex;
     flex-direction: row;
     align-items: center;
 }
 
-.inline p{
+.inline-row p{
     color: #858585;
     font-size: 18px;
     padding-left: 10px;
@@ -100,6 +100,17 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+/* LISTA-NOME PLAYLIST */
+.lista-playlist ul{
+    margin-top: 20px;
+    list-style: none;
+}
+
+.lista-playlist li{
+    color: #858585;
+    padding-bottom: 20px;
 }
 
 
@@ -118,7 +129,6 @@ body{
 
 .mini-container{
     display: flex;
-    flex-wrap: wrap;
 }
 
 .main-brand .main-barra{
@@ -136,7 +146,7 @@ body{
 /* FOOTER */
 .main-footer{
     background: darkslateblue;
-    height: 100px;
+    height: 80px;
 }
 
 .musica{
@@ -147,5 +157,5 @@ body{
 .musica-quad{
     background: dodgerblue;
     border: 1px solid black;
-    height: 100px;
+    height: 80px;
 }
