--- a/css/main.css
+++ b/css/main.css
@@ -284,8 +284,39 @@ p:hover{
     margin: 10px;
 }   
 
+.immagini:hover .layover,
+.immagini:hover .layover-1{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .4);
+    top: 0;
+    left: 0;
+}
+
+.immagini:hover .layover-1{
+    border-radius: 50%;
+}
+
+
+.immagini .plus-icona{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 40px;
+    display: none;
+    transition: .3s;
+}
+
+.immagini:hover .plus-icona{
+    display: block;
+}
+
 .immagini{
     height: 230px;
+    position: relative;
 }
 
 .immagini img{
