--- a/css/main.css
+++ b/css/main.css
@@ -308,6 +308,10 @@ p:hover{
     border-radius: 50%;
 }
 
+.layover,
+.layover-1{
+    transition: .3s;
+}
 
 .immagini .plus-icona{
     position: absolute;
@@ -317,6 +321,7 @@ p:hover{
     color: #fff;
     font-size: 40px;
     display: none;
+    transition: .3s;
     transition: .3s;
 }
 
@@ -328,6 +333,11 @@ p:hover{
     height: 230px;
     position: relative;
     cursor: pointer;
+    transition: .3s;
+}
+
+.immagini:hover{
+    transform: scale(1.1);
 }
 
 .immagini img{
