--- a/css/main.css
+++ b/css/main.css
@@ -30,10 +30,6 @@ body{
 }
 
 /* HOME-SEARCH-LIBRARY */
-.side-home-cerca p{
-    margin-left: 10px;
-}
-
  .about-side-1{
     color: #858585;
 }
@@ -294,7 +290,7 @@ p:hover{
 }
 
 .mini-container .col{
-    width: 230px;
+    width: calc( 100% / 6 - 20px);
     margin: 10px;
     padding-left: 10px;
 }   
@@ -326,8 +322,6 @@ p:hover{
     color: #fff;
     font-size: 40px;
     display: none;
-    transition: .3s;
-    transition: .3s;
 }
 
 .immagini:hover .plus-icona{
@@ -335,7 +329,7 @@ p:hover{
 }
 
 .immagini{
-    height: 230px;
+    max-width: 100%;
     position: relative;
     cursor: pointer;
     transition: .3s;
@@ -616,4 +610,21 @@ p:hover{
 
 .icone-destra-footer:hover .pallina-volume{
     display: block;
+}
+
+/* MEDIA-QUERY */
+
+/* SCREEN-MD */
+@media screen and (max-width: 1199px){
+    .mini-container .col{
+        width: calc(100% / 4 - 20px);
+    }
+
+}
+
+/* SCREEN-S */
+@media screen and (max-width: 767px){
+    .mini-container .col{
+        width: calc(100% / 2 - 20px);
+    }
 }
